<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Resources</string>
    <string name="language">English</string>
    <string name="density" tools:ignore="MissingTranslation">DPI</string>
    <string name="orientation">Portland</string>
    <string name="night_mode">Not night</string>
    <string name="screen_format">Not long</string>
    <string name="version" tools:ignore="MissingTranslation">Any</string>
    <string name="descriptionLanguage">Language</string>
    <string name="descriptionDensity">Density</string>
    <string name="descriptionOrientation">Orientation</string>
    <string name="descriptionNight_mode">Night mode</string>
    <string name="descriptionScreen_format">Screen format</string>
    <string name="descriptionVersion">Version</string>
</resources>